# PyDICE-2023

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
benchmark/: timing_benchmark.py
dice/: __init__.py  model.py  params.py  recover.py  scc.py
dice/docs/: index.md
dice/notebooks/: dashboard.ipynb
dice/validation/gams_reference/: dice_param.xlsx  dice_scenario_R1.xlsx  dice_scenario_R2.xlsx  dice_scenario_R3.xlsx  dice_scenario_R4.xlsx  dice_scenario_R5.xlsx  dice_scenario_T1.5.xlsx  dice_scenario_T2.xlsx  dice_scenario_altdam.xlsx  dice_scenario_base.xlsx  dice_scenario_opt.xlsx  dice_scenario_paris.xlsx
dice/validation/python_output/: dice2023_parameters_scen1.csv  dice2023_state_scen1.csv  dice2023_state_scen10.csv  dice2023_state_scen2.csv  dice2023_state_scen3.csv  dice2023_state_scen4.csv  dice2023_state_scen5.csv  dice2023_state_scen6.csv  dice2023_state_scen7.csv  dice2023_state_scen8.csv  dice2023_state_scen9.csv
docs/: index.md
tests/: test_smoke.py  test_validation.py
